# Robot-4-Team-Project

./: PktDef.h  README.md
Robot4/: README.md  Robot4.sln
Robot4(Windows)/Robot4/: Main.cpp  MySocket.cpp  MySocket.h  PktDef.cpp  PktDef.h  Robot4.vcxproj  Robot4.vcxproj.filters
Robot4(Windows)/Robot4_TEST_MILESTONE1/: Robot4_TEST_MILESTONE1.vcxproj.filters
Robot4(Windows)/RobotGUI/: CMakeLists.txt  MySocket.cpp  MySocket.h  main.cpp
Robot4(Windows)/TestResults/9d65f69d-5225-4d5a-951e-0f5dde0aa8fa/: baona_MSI_2025-04-13.05_15_33.coverage
Robot4/Robot4/: Main.cpp  MySocket.cpp  MySocket.h  PktDef.cpp  PktDef.h  Robot4.vcxproj  Robot4.vcxproj.filters
Robot4/Robot4_TESTS/: Robot4_TESTS.cpp  Robot4_TESTS.vcxproj  Robot4_TESTS.vcxproj.filters
Robot4/Robot4_TEST_MILESTONE1/: Robot4_TEST_MILESTONE1.cpp  Robot4_TEST_MILESTONE1.vcxproj
Robot4/Robot4_TEST_MILESTONE2/: Robot4_TEST_MILESTONE2.cpp  Robot4_TEST_MILESTONE2.vcxproj  Robot4_TEST_MILESTONE2.vcxproj.filters
Robot4/RobotGUI/: CMakeLists.txt  MySocket.cpp  main.cpp
Robot4/RobotGUI/public/: connect.html  index.html
Robot4/RobotGUI/public/scripts/: connect.js  functions.js  script.js
Robot4/RobotGUI/public/styles/: styles.css
Robot4/TestResults/2c575d35-aab5-4fec-8329-80b08ebb8482/: baona_MSI_2025-04-13.04_21_18.coverage
Robot4/x64/Debug/: Robot4_TESTS.exp  Robot4_TESTS.lib  (+6 more)
RobotLinux/: Main.cpp  MySocket.cpp  MySocket.h  PktDef.cpp  a.out  robot_control
Robot_Group4_Final/: MySocket.cpp  MySocket.h  PktDef.cpp  PktDef.h  main.cpp
Robot_Group4_Final/public/: connect.html  index.html
(+64 files in other folders)
